+ [lang] Finnish update, thanks to Jouni Kahkonen
+ [lang] Lithuanian update, thanks to Rytis Slatkevicius - rytis_s 
- bug #2931939 [status] Seeing "m" as unit is confusing 
- bug #2926613 [edit] Copy database shows errors when DB has foreign key

3.2.6.0 (not yet released)
- bug #2938492 [display] information_schema sorting order 

3.2.5.0 (2010-01-10)
- patch #2903400 [bookmarks] Status of bookmark table, 
  thanks to Virsacer - virsacer 
- bug [history] QueryHistoryDB is not respected
- bug #2905629 [auth] Blowfish secret is not hashed
- bug #2910000 [gui] ShowServerInfo should hide all server info from main page
- bug #2910568 [structure] Table size for ARCHIVE tables is not displayed 
- patch #2899969 [core] Session lock blocks working from a second window,
  thanks to Greg Roach - fisharebest
- patch #2915168 [import] Incorrect parsing of DELIMITER keyword,
  thanks to Greg Roach - fisharebest
- patch #2918831 [export] Missing backquotes on reserved words, 
  thanks to Virsacer - virsacer 
- [core] Fix broken cleanup of $_GET
- bug #2924357 [operations] Cannot rename a database that has foreign key
  constraints
- bug #869006 [structure] Ignore number of records for MRG_MyISAM tables
- bug [browse] "Show BLOB contents" should display HTML code that is present
  in a BLOB, thanks to Vincent van der Tuin
- [privileges] Improve Proper escaping of hostname

3.2.4.0 (2009-12-02)
- bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status
- bug #2890451 [setup] Inconsistent generated "designer_coords"
- bug #2890443 [mysqli] "No index used in query" exception is reported 
- bug #2891250 [ob] Garbled data in navi frame (PHP 5.2.11 bug)
- bug #2887357 [core] Slow loading times with large databases (partial fix)
- bug #2893931 [lang] Typo and empty message
+ [lang] Russian update, thanks to Victor Volkov
- bug #2823599 [edit] UUID Primary Key wrongly updated
- bug #2895894 [structure] Empty default value not set properly